kubernetes/clusters/KC/paperless-ngx/paperless-ngx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: paperless-ngx
    namespace: paperless-ngx
spec:
    replicas: 1
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: paperless-ngx
    template:
        metadata:
            labels:
                app: paperless-ngx
        spec:
            containers:
                - name: paperless-ngx
                  image: ghcr.io/paperless-ngx/paperless-ngx:2.8.1
                  imagePullPolicy: Always
                  volumeMounts:
                    - name: pvc
                      mountPath: /usr/src/paperless/data
                      subPath: data
                    - name: pvc
                      mountPath: /usr/src/paperless/media
                      subPath: media
                    - name: pvc
                      mountPath: /usr/src/paperless/export
                      subPath: export
                    - name: pvc
                      mountPath: /usr/src/paperless/consume
                      subPath: consume
            volumes:
                - name: pvc
                  persistentVolumeClaim:
                    claimName: paperless-ngx-pvc
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSTnFEOHhMTmtBdm9nMzc4
[...]
            qe0Kqc+CnGGdbeVcd4N6+Yx/4QMTsZR26Q6J6Z3NceWdILtgiKl9MQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-10T13:38:26Z"
    mac: ENC[AES256_GCM,data:8P19l4zm45elSU5gDnBAr6YQe/B921+rEvRJQfeSfQAKCeTHEowp0jZfwIgbxGYhXyhOxoixjmutJmKMmzcWtWaEVwHokNvA5aWvhFgZwOumNH39CSF1pAJHPM2/BVfRxqxyiMR8oKE7S5mcDDpgctef0dKKiLEgp/tics2tE9g=,iv:uPhM6p3ZPTvBe+etvwwUqdJk5UUrLD9IvTIJGbsPRh0=,tag:pT3hvjo4dUQb1wc+S6tyww==,type:str]
    pgp: []
    encrypted_regex: ^(data|env)$
    version: 3.8.1
