kubernetes/clusters/KC/paperless-ngx/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: paperless-ngx
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.2.4
        imagePullPolicy: Always
        volumeMounts:
          - name: pvc
            mountPath: /data
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: redis-pvc
