kubernetes/clusters/KC/paperless-ngx/samba-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: samba
    namespace: paperless-ngx
spec:
    replicas: 1
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: samba
    template:
        metadata:
            labels:
                app: samba
        spec:
            containers:
                - name: samba
                  image: ghcr.io/nomsplease/samba:4.19.5
                  imagePullPolicy: Always
                  resources:
                    requests:
                        cpu: 512m
                        memory: 512Mi
                    limits:
                        cpu: 1024m
                        memory: 1Gi
                  volumeMounts:
                    - name: config
                      mountPath: /etc/samba/
                      readOnly: true
                    - name: pvc
                      mountPath: /export
                      subPath: export
                    - name: pvc
                      mountPath: /consume
                      subPath: consume
            volumes:
                - name: pvc
                  persistentVolumeClaim:
                    claimName: paperless-ngx-pvc
                - name: config
                  configMap:
                    name: samba
                    items:
                        - key: smb.conf
                          path: smb.custom
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzQVFpTlNZcmQ4OGhVb3RB
[...]
            FOEvgLhg5tMQRjxkCIhNo/LrXK4WXLkTqPAPJ+0c926N029183Du2Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-11T15:34:21Z"
    mac: ENC[AES256_GCM,data:Xd9MqBnzE8JvVKCIwlOgEokzKSYV7P7JYZdcdrx5u/BH50pjbpeV9cYsh4WzkZ9eYvKyXEa9fFLG1ixuMA9f6/TFxxeny+bqtXeXEOQFE8GyvpVRy2TYg8ZbtA1Opio9f7DfBZf6kjTDaLiN+1FJ40BJzqc/sTzUgTRVRQuRHYg=,iv:colCv80psSC7PeXXybXi4jS0CERA3k6jPgMDdB5M0kM=,tag:5zIT640qIBBj4PR/O9pbiw==,type:str]
    pgp: []
    encrypted_regex: ^(data|env)$
    version: 3.8.1
