kubernetes/clusters/KC/paperless-ngx/tika-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless-ngx
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
      - name: tika
        image: ghcr.io/paperless-ngx/tika:2.9.1-minimal
        imagePullPolicy: Always
