kubernetes/clusters/KC/paperless-ngx/samba-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: samba
    namespace: paperless-ngx
spec:
    selector:
        app: samba
    type: LoadBalancer
    loadBalancerIP: ENC[AES256_GCM,data:FeKJyPy6BH+r8ok=,iv:t6omVLdc9iaA9pgMd73mbWCDZOGHyHsXTsKUS/22tnA=,tag:QJDC2R8+7dikq7W6XDarYQ==,type:str]
    ports:
        - name: ENC[AES256_GCM,data:wUyk,iv:EWXHNAV3bIrrwbYbLjKaYGdDdKFZ31nYFmoLryrK6uQ=,tag:Fzvsi79JnpnixGE8w1sM3w==,type:str]
          port: ENC[AES256_GCM,data:MKva,iv:NE114V7aIeleg11DXHgVh0v0IQbqEst7OvrikooYlF8=,tag:Tsna87E8Odu4zQmLxxlztQ==,type:int]
          targetPort: ENC[AES256_GCM,data:Ys5S,iv:8o9UdLOhLwRLm1pCF7dfAvaWLbortW4ZleUi0gIKpus=,tag:/R1IXh9mDgphc+mTqaWRgw==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRdlJHamgwRksyT0RRMWlT
[...]
            cGzOYNtLMF99qaX6XQ6n5xeJCR8j94daV1Ryo3Q7ALNRyRri7SMPAg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T15:41:31Z"
    mac: ENC[AES256_GCM,data:bP9Vc5orYI9ESEEAiwiO0w8Y8eoGikOCh6f/YgiZsZS+dYfRx3sJghH0U9LHUczFaGf8cCEjoGSjvifpDHSbTuHSZ5g+Yn9U8i3FS1L2SCK90VlPF4zNKQD8SYrBak8gF/RrW/C79rm3w72XGaK4YfqGbOxdNhCCGKDwZke0G2E=,iv:ZcXVOX2PicXWoIS33D0MxvU7qJeR3g8+IaQFyOaaCew=,tag:w4el6tAng8bx2XmWLmkplg==,type:str]
    pgp: []
    encrypted_regex: ^(data|ports|externalName|loadBalancerIP)$
    version: 3.8.1
