kubernetes/clusters/KC/paperless-ngx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: paperless-ngx
    namespace: paperless-ngx
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:bUlFi1GmCfkASX75o+VjdePkJYT0+LHf7Xcnnow=,iv:/HmxYGWo6OHzaz6fWtMoEjzJFcmgMOiIZ1RJvF0GZ9E=,tag:ULuEvyAalEZewHJ0b2v/ug==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:4zSmjPRf9JtRg8wsdg==,iv:iKpMZchKgVjDd4yGsyeq575uAUCuVfyepEKflcQr/Ww=,tag:etDSKU128hvfo7eLVk7oIQ==,type:str]
              namespace: ENC[AES256_GCM,data:WLgYkfOJdndCNlp9Xg==,iv:bGBobiK1CfaA5F3ATr9lbbTsdRqKD48Z84XVGZyr29U=,tag:48v0njyA+emB8CIOq5KhvQ==,type:str]
              port: ENC[AES256_GCM,data:XHQOjA==,iv:faWDN4efx8su7trZmGAFTJ2Qu5+deRg0+pV3qDg/arw=,tag:ECW7pAFqilAIDiJzyPD3/w==,type:int]
        - match: ENC[AES256_GCM,data:j0EEWbIaq7VH6AU36tU/CEMriv0fBGw=,iv:spqzT25r2qcdFpnqSWq/JX6+Z9QhUr9xQoCldeLiM0I=,tag:h6vcwW7DOIN9s9WQ3t57Pw==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:wG3wxfzdwSBrReNMfw==,iv:a1//oyC0D96kcHJqfjS8mjZAYs1jxPbnH0nENFHAz1o=,tag:0Fmn7kK1iGnH/JMLi9J9gA==,type:str]
              namespace: ENC[AES256_GCM,data:VPIaB22+tl7VQXpLIg==,iv:2Vc5UDavQQ6EYZtXdqEFwKTfWo8Ae6cldsG2prygNdo=,tag:pZ2x0X9FrXcmE5xcP7xHXQ==,type:str]
              port: ENC[AES256_GCM,data:Yym88Q==,iv:Xg22C6I+PmsF2zGQSV1Boz9jcA9mLsi8sNZz1GWSRPQ=,tag:oSvW8evZST+nh8EAbnHDtA==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:hyx+l8x/PbhJA6o=,iv:aHq+YC35ogLC9TJ/w06k8D4AKtJZw3NTGwajCmHoX0w=,tag:7Joc6OvKbubI8//n3k02Rw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByWEhSR3RHQXloRjQzc2dE
[...]
            FoJGfavYwPWz9ernxp38rflOf7Tzzm+L7enZ8z3OgzjehX029cSa6w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-04-09T15:37:29Z"
    mac: ENC[AES256_GCM,data:yfA60PJ6bKWCrnHIFXI9e84VTc40mugRGGnJpEV0xY5MdB77q8uxwdMbmcFr5RCJ70NAAkDdIhUkjLBlY8Q5XmoLs6rh7JxlYaSsJiqp+jyQlhLWn9FI03DF2MyVIV0ts2N+E6nJMNB7PCzR4eSB6WQm69sRnHfqspM3pnc69fQ=,iv:SggkqEUTIlKa9h7SDei1ywUL1TVpDGwCvgziSa/XIAc=,tag:VUwxQWG3gFp78xbUswP3uA==,type:str]
    pgp: []
    encrypted_regex: ^(data|match|secretName|services)$
    version: 3.8.1
